[package]
name = "sokoban"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8"
serde = "1"
serde_json = "1"

[target.'cfg(macos)'.dependencies.bevy]
version = "0.8"
default-features = false
features = ['dynamic']
